-Capa negocio mejorada -Formulario Curso y Estudiante mejorados -Reestructuracion de packages

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,12 +30,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.coollection-0.2.0.jar=coollection-0.2.0.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\Nico\\Documents\\NetBeansProjects\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.sqljdbc4.jar=sqljdbc4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.sqljdbc4.jar}:\
-    ${file.reference.coollection-0.2.0.jar}
+    ${file.reference.coollection-0.2.0.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
